--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
               </a>
                 <ul class="nav-list">
                   <li class="nav-item">
-                    <a href="./index.html" class="nav-link current">Студия</a>
+                    <a href="./index.html" class="nav-link section-after current">Студия</a>
                   </li>
                   <li class="nav-item">
-                    <a href="./portfolio.html" class="nav-link">Портфолио</a>
+                    <a href="./portfolio.html" class="nav-link section-after">Портфолио</a>
                   </li>
-                  <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
+                  <li class="nav-item"><a href="" class="nav-link section-after">Контакты</a></li>
                 </ul>
             
         
@@ -431,5 +431,17 @@
         </ul>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" data-modal-close class="close-btn">
+          <svg class="join-icon" width="18" height="18">
+            <use href="./images/sprite/symbol-defs.svg#icon-close-black-18dp-2-1"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
+
     </body>
 </html>
