--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <section class="section-hero">
       <div class="container">
       <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-      <button type="button" class="button main-btn">Заказать услугу</button>
+      <button type="button" data-modal-open class="button main-btn">Заказать услугу</button>
       </div>
       </section>
       
@@ -436,8 +436,8 @@
       <div class="modal">
         <button type="button" data-modal-close class="close-btn">
           <svg class="join-icon" width="18" height="18">
-            <use href="./images/sprite/symbol-defs.svg#icon-close-black-18dp-2-1"></use>
-          </svg>
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+            </svg>
         </button>
       </div>
     </div>
